insert and delete files from S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -15,3 +16,10 @@ spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFa
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.ssl.enable = true
+
+amazon.s3.bucket-name=minhalojas3
+amazon.s3.endpoint=https://minhalojas3.s3-us-east-1.amazonaws.com
+amazon.s3.access-key=${ACCESS_KEY}
+amazon.s3.secret-key=${SECRET_KEY}
+
+server.port=8081
