send order confirmation by email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender="vinicius.santos.oliv3ira@gmail.com"
-default.recipient="vinicius.santos.oliv3ira@gmail.com"
+default.sender=vinicius.santos.oliv3ira@gmail.com
+default.recipient=vinicius.santos.oliv3ira@gmail.com
+
+amazon.s3.bucket-name=minhalojas3
+amazon.s3.endpoint=https://minhalojas3.s3-us-east-1.amazonaws.com
+amazon.s3.access-key=${ACCESS_KEY}
+amazon.s3.secret-key=${SECRET_KEY}
+
+server.port=8081
