--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.profiles.active=dev
 
 default.sender=vinicius.santos.oliv3ira@gmail.com
-default.recipient=vinicius.santos.oliv3ira@gmail.com
+default.recipient=viniciusuptelecom@gmail.com
+
+spring.mail.host: 127.0.0.1
 
 amazon.s3.bucket-name=minhalojas3
 amazon.s3.endpoint=https://minhalojas3.s3-us-east-1.amazonaws.com
