--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ jwt.expiration=60000
 
 amazon.s3.bucket-name=minhalojas3
 amazon.s3.endpoint=https://minhalojas3.s3-us-east-1.amazonaws.com
+amazon.s3.region=us-east-1
 amazon.s3.access-key=${ACCESS_KEY}
 amazon.s3.secret-key=${SECRET_KEY}
 
