--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ amazon.s3.region=us-east-1
 amazon.s3.access-key=${ACCESS_KEY}
 amazon.s3.secret-key=${SECRET_KEY}
 
+img.prefix.client.profile=cp
+
 server.port=8081
